[project]
name = "nullblock-sdk"
version = "0.1.0"
description = "Python SDK for NullBlock — agents, engrams, MCP tools, and Crossroads"
requires-python = ">=3.10"
dependencies = ["httpx>=0.27"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nullblock"]
